testsuite/bsc.typechecker/kind/ClassDefParamGivenNumUsedNonNum.bs.bsc-out.expected
checking package dependencies
compiling ClassDefParamGivenNumUsedNonNum.bs
Error: "ClassDefParamGivenNumUsedNonNum.bs", line 6, column 18: (T0027)
  The numeric type `b' was found where a value type was expected.
